<resources>
    <string name="app_name">GMUHackDay</string>

    <!-- Strings for hints -->
    <string name="hint_firstname">Your First Name</string>
    <string name="hint_lastname">Your Last Name</string>
    <string name="hint_email">Your Email Address</string>
    <string name="hint_password">Your Password</string>
    <string name="hint_phone">Your Phone Number</string>

    <!-- Menu Actiosn -->
    <string name="action_go_back">Go Back</string>
    <string name="action_submit">Submit</string>


    <!-- Strings for buttons -->
    <string name="btn_register">REGISTER</string>
    <string name="btn_signin">SIGN IN</string>


    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
